# lucent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: app.h  calendar_model.cpp  calendar_model.h  calendar_renderer.cpp  calendar_renderer.h  calendar_window.cpp  calendar_window.h  config.h  holiday_service.cpp  holiday_service.h  http_client.cpp  http_client.h  lucent.manifest  lucent.rc  lunar_provider.cpp  lunar_provider.h  main.cpp  resource.h  tray_icon.cpp  tray_icon.h
